--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "",
   "dependencies": {
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
@@ -37,6 +38,7 @@
     "imagemin-webpack-plugin": "^2.1.5",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
+    "redux": "^4.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "0.21.0",
     "typescript": "2.9.2",
