--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Shell",
   "license": "",
   "dependencies": {
+    "immutable": "^3.8.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7"
