--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "immutable": "^3.8.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
