--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
